JM: Fix bad formatting string for Vertex print (problem reported by Frank).