@@ -773,10 +773,11 @@ public class Printer
 	class VertexPrinter extends LCTypePrinter{
 		void print(LCCollection coll, int nprint){
 			ps.println(" [   id   ] | pri |    alg. type    | chi2 | prob. |          position ( x,y,z)       | [assRecP]");
-			
+					
 			for (int i=0; i<nprint; i++){
 				Vertex v = (Vertex)coll.getElementAt(i);
-				ps.format(" [%08x] | %3s | %15s | %4.2e | %4.2e | (%5.3e,%5.3e,%5.3e) | %4.2e | %4.2e | %4.2e | (%5.3e,%5.3e,%5.3e) | [%08x] \n",
+												
+				ps.format(" [%08x] | %3s | %15s | %4.2e | %4.2e | (%5.3e,%5.3e,%5.3e) | [%08x] \n",
 			    		new Object[] {
 			    			Integer.valueOf(v.hashCode()),
 			    			v.isPrimary() ? "yes" : "no",
@@ -786,7 +787,7 @@ public class Printer
 			    			Double.valueOf(v.getPosition()[0]),
 			    			Double.valueOf(v.getPosition()[1]), 
 			    			Double.valueOf(v.getPosition()[2]),
-			    			(v.getAssociatedParticle() != null ? Integer.valueOf(v.getAssociatedParticle().hashCode()):0)
+			    			(v.getAssociatedParticle() != null ? Integer.valueOf(v.getAssociatedParticle().hashCode()):new Integer(0))
 			    			}
 			    );
 			    
